chore: set scrollbar gutter to stable to prevent layout shifts

--- a/apps/web/src/styles/_normalize.scss
+++ b/apps/web/src/styles/_normalize.scss
@@ -21,6 +21,7 @@ html {
   -webkit-text-size-adjust: 100%;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  scrollbar-gutter: stable;
 }
 
 body {
